[gd_scene load_steps=115 format=2]

[ext_resource path="res://zombie/Zombie.tscn" type="PackedScene" id=1]
[ext_resource path="res://resource/png/demo_player/player18.png" type="Texture" id=2]
[ext_resource path="res://resource/png/demo_player/player19.png" type="Texture" id=3]
[ext_resource path="res://resource/png/demo_player/player20.png" type="Texture" id=4]
[ext_resource path="res://resource/png/demo_player/player21.png" type="Texture" id=5]
[ext_resource path="res://resource/png/demo_player/player22.png" type="Texture" id=6]
[ext_resource path="res://resource/png/demo_player/player23.png" type="Texture" id=7]
[ext_resource path="res://resource/png/demo_player/player24.png" type="Texture" id=8]
[ext_resource path="res://resource/png/demo_player/player26.png" type="Texture" id=9]
[ext_resource path="res://resource/png/demo_player/player25.png" type="Texture" id=10]
[ext_resource path="res://resource/png/demo_player/player27.png" type="Texture" id=11]
[ext_resource path="res://resource/png/demo_player/player28.png" type="Texture" id=12]
[ext_resource path="res://resource/png/demo_player/player29.png" type="Texture" id=13]
[ext_resource path="res://resource/png/demo_player/player30.png" type="Texture" id=14]
[ext_resource path="res://resource/png/demo_player/player31.png" type="Texture" id=15]
[ext_resource path="res://resource/png/demo_player/player32.png" type="Texture" id=16]
[ext_resource path="res://resource/png/demo_player/player33.png" type="Texture" id=17]
[ext_resource path="res://resource/png/demo_player/player34.png" type="Texture" id=18]
[ext_resource path="res://resource/png/demo_player/player35.png" type="Texture" id=19]
[ext_resource path="res://resource/png/demo_player/player36.png" type="Texture" id=20]
[ext_resource path="res://resource/png/demo_player/player37.png" type="Texture" id=21]
[ext_resource path="res://resource/png/demo_player/player38.png" type="Texture" id=22]
[ext_resource path="res://resource/png/demo_player/player39.png" type="Texture" id=23]
[ext_resource path="res://resource/png/demo_player/player40.png" type="Texture" id=24]
[ext_resource path="res://resource/png/demo_player/player41.png" type="Texture" id=25]
[ext_resource path="res://resource/png/demo_player/player42.png" type="Texture" id=26]
[ext_resource path="res://resource/png/demo_player/player43.png" type="Texture" id=27]
[ext_resource path="res://resource/png/demo_player/player44.png" type="Texture" id=28]
[ext_resource path="res://resource/png/demo_player/player45.png" type="Texture" id=29]
[ext_resource path="res://resource/png/demo_player/player46.png" type="Texture" id=30]
[ext_resource path="res://resource/png/demo_player/player47.png" type="Texture" id=31]
[ext_resource path="res://resource/png/demo_player/player48.png" type="Texture" id=32]
[ext_resource path="res://resource/png/demo_player/player49.png" type="Texture" id=33]
[ext_resource path="res://resource/png/demo_player/player50.png" type="Texture" id=34]
[ext_resource path="res://resource/png/demo_player/player51.png" type="Texture" id=35]
[ext_resource path="res://resource/png/demo_player/player52.png" type="Texture" id=36]
[ext_resource path="res://resource/png/demo_player/player53.png" type="Texture" id=37]
[ext_resource path="res://resource/png/demo_player/player54.png" type="Texture" id=38]
[ext_resource path="res://resource/png/demo_player/player55.png" type="Texture" id=39]
[ext_resource path="res://resource/png/demo_player/player56.png" type="Texture" id=40]
[ext_resource path="res://resource/png/demo_player/player57.png" type="Texture" id=41]
[ext_resource path="res://resource/png/demo_player/player58.png" type="Texture" id=42]
[ext_resource path="res://resource/png/demo_player/player59.png" type="Texture" id=43]
[ext_resource path="res://resource/png/demo_player/player60.png" type="Texture" id=44]
[ext_resource path="res://resource/png/demo_player/player61.png" type="Texture" id=45]
[ext_resource path="res://resource/png/demo_player/player62.png" type="Texture" id=46]
[ext_resource path="res://resource/png/demo_player/player63.png" type="Texture" id=47]
[ext_resource path="res://resource/png/demo_player/player64.png" type="Texture" id=48]
[ext_resource path="res://resource/png/demo_player/player65.png" type="Texture" id=49]
[ext_resource path="res://resource/png/demo_player/player66.png" type="Texture" id=50]
[ext_resource path="res://resource/png/demo_player/player67.png" type="Texture" id=51]
[ext_resource path="res://resource/png/demo_player/player68.png" type="Texture" id=52]
[ext_resource path="res://resource/png/demo_player/player69.png" type="Texture" id=53]
[ext_resource path="res://resource/png/demo_player/player70.png" type="Texture" id=54]
[ext_resource path="res://resource/png/demo_player/player71.png" type="Texture" id=55]
[ext_resource path="res://resource/png/demo_player/player72.png" type="Texture" id=56]
[ext_resource path="res://resource/png/demo_player/player73.png" type="Texture" id=57]
[ext_resource path="res://resource/png/demo_player/player74.png" type="Texture" id=58]
[ext_resource path="res://resource/png/demo_player/player75.png" type="Texture" id=59]
[ext_resource path="res://resource/png/demo_player/player76.png" type="Texture" id=60]
[ext_resource path="res://resource/png/demo_player/player77.png" type="Texture" id=61]
[ext_resource path="res://resource/png/demo_player/player78.png" type="Texture" id=62]
[ext_resource path="res://resource/png/demo_player/player79.png" type="Texture" id=63]
[ext_resource path="res://resource/png/demo_player/player80.png" type="Texture" id=64]
[ext_resource path="res://resource/png/demo_player/player81.png" type="Texture" id=65]
[ext_resource path="res://resource/png/demo_player/player82.png" type="Texture" id=66]
[ext_resource path="res://resource/png/demo_player/player83.png" type="Texture" id=67]
[ext_resource path="res://resource/png/demo_player/player84.png" type="Texture" id=68]
[ext_resource path="res://resource/png/demo_player/player85.png" type="Texture" id=69]
[ext_resource path="res://resource/png/demo_player/player86.png" type="Texture" id=70]
[ext_resource path="res://resource/png/demo_player/player87.png" type="Texture" id=71]
[ext_resource path="res://resource/png/demo_player/player88.png" type="Texture" id=72]
[ext_resource path="res://resource/png/demo_player/player89.png" type="Texture" id=73]
[ext_resource path="res://resource/png/demo_player/player90.png" type="Texture" id=74]
[ext_resource path="res://weapon/Weapon.tscn" type="PackedScene" id=75]
[ext_resource path="res://resource/png/demo/blood_red2.png" type="Texture" id=76]
[ext_resource path="res://resource/png/demo/blood_green3.png" type="Texture" id=77]
[ext_resource path="res://resource/png/demo/blood_green1.png" type="Texture" id=78]
[ext_resource path="res://resource/png/demo_player/player1.png" type="Texture" id=79]
[ext_resource path="res://resource/png/demo_player/player2.png" type="Texture" id=80]
[ext_resource path="res://resource/png/demo_player/player3.png" type="Texture" id=81]
[ext_resource path="res://resource/png/demo_player/player4.png" type="Texture" id=82]
[ext_resource path="res://resource/png/demo_player/player5.png" type="Texture" id=83]
[ext_resource path="res://resource/png/demo_player/player6.png" type="Texture" id=84]
[ext_resource path="res://resource/png/demo_player/player7.png" type="Texture" id=85]
[ext_resource path="res://resource/png/demo_player/player8.png" type="Texture" id=86]
[ext_resource path="res://resource/png/demo_player/player9.png" type="Texture" id=87]
[ext_resource path="res://resource/png/demo_player/player10.png" type="Texture" id=88]
[ext_resource path="res://resource/png/demo_player/player11.png" type="Texture" id=89]
[ext_resource path="res://resource/png/demo_player/player12.png" type="Texture" id=90]
[ext_resource path="res://resource/png/demo_player/player13.png" type="Texture" id=91]
[ext_resource path="res://resource/png/demo_player/player14.png" type="Texture" id=92]
[ext_resource path="res://resource/png/demo_player/player15.png" type="Texture" id=93]
[ext_resource path="res://resource/png/demo_player/player16.png" type="Texture" id=94]
[ext_resource path="res://ignition_timer/IgnitionTimer.tscn" type="PackedScene" id=95]
[ext_resource path="res://resource/png/car.png" type="Texture" id=96]
[ext_resource path="res://resource/png/cabin.png" type="Texture" id=97]
[ext_resource path="res://resource/png/button/door.png" type="Texture" id=98]
[ext_resource path="res://resource/png/demo/blood_green2.png" type="Texture" id=99]
[ext_resource path="res://resource/png/demo/blood_red1.png" type="Texture" id=100]
[ext_resource path="res://resource/png/demo/blood_red3.png" type="Texture" id=101]
[ext_resource path="res://resource/png/demo_player/player17.png" type="Texture" id=102]
[ext_resource path="res://game/Life.gd" type="Script" id=103]
[ext_resource path="res://resource/png/heart.png" type="Texture" id=104]
[ext_resource path="res://resource/png/stone1.png" type="Texture" id=105]
[ext_resource path="res://resource/font/font32px.tres" type="DynamicFont" id=106]
[ext_resource path="res://game/WeaponSpawner.gd" type="Script" id=107]
[ext_resource path="res://game/Game.gd" type="Script" id=108]
[ext_resource path="res://game/WeaponUI.gd" type="Script" id=109]
[ext_resource path="res://resource/png/fukidasi.png" type="Texture" id=110]
[ext_resource path="res://game/Fukidasi.gd" type="Script" id=111]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 100 ), ExtResource( 76 ), ExtResource( 101 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 78 ), ExtResource( 99 ), ExtResource( 77 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 102 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 108 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 240.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fukidasi" type="TextureRect" parent="."]
margin_left = 113.0
margin_top = 83.0
margin_right = 299.0
margin_bottom = 153.0
texture = ExtResource( 110 )
expand = true
script = ExtResource( 111 )

[node name="Label" type="RichTextLabel" parent="Fukidasi"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 7.0
margin_right = -6.0
margin_bottom = -31.0
custom_fonts/normal_font = ExtResource( 106 )
bbcode_enabled = true
bbcode_text = "[center][shake]AAAAAAAA![/shake][/center]"
meta_underlined = false
text = "AAAAAAAA!"
scroll_active = false

[node name="RedBlood" type="AnimatedSprite" parent="."]
position = Vector2( 80, 119.25 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="GreenBlood" type="AnimatedSprite" parent="."]
position = Vector2( 80, 119.25 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Cabin" type="Sprite" parent="."]
position = Vector2( 52, 93 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 97 )
__meta__ = {
"_edit_lock_": true
}

[node name="Door" type="Sprite" parent="Cabin"]
position = Vector2( 6.5, 6 )
texture = ExtResource( 98 )
offset = Vector2( 14, 0 )

[node name="Car" type="Sprite" parent="."]
position = Vector2( 127, 162 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 96 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 80, 119 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
frame = 89
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Zombie" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 115 )

[node name="Zombie4" parent="." instance=ExtResource( 1 )]
position = Vector2( 59, 151 )

[node name="Zombie5" parent="." instance=ExtResource( 1 )]
position = Vector2( 190, 194 )

[node name="Zombie6" parent="." instance=ExtResource( 1 )]
position = Vector2( 195, 131 )

[node name="WeaponSpawner" type="Node2D" parent="."]
position = Vector2( 133, 156 )
script = ExtResource( 107 )
weapon_prefab = ExtResource( 75 )
gravity = 500.0
speed = 300.0

[node name="GameUILayer" type="CanvasLayer" parent="."]

[node name="IgnitionTimer" parent="GameUILayer" instance=ExtResource( 95 )]
__meta__ = {
"_edit_lock_": true
}
is_active = true

[node name="LifeUI" type="Node2D" parent="GameUILayer"]
position = Vector2( 8, -9 )
script = ExtResource( 103 )

[node name="Heart" type="Sprite" parent="GameUILayer/LifeUI"]
position = Vector2( 115, 222 )
scale = Vector2( 2, 2 )
texture = ExtResource( 104 )

[node name="Heart2" type="Sprite" parent="GameUILayer/LifeUI"]
position = Vector2( 147, 221 )
scale = Vector2( 2, 2 )
texture = ExtResource( 104 )

[node name="Heart3" type="Sprite" parent="GameUILayer/LifeUI"]
position = Vector2( 179, 221 )
scale = Vector2( 2, 2 )
texture = ExtResource( 104 )

[node name="WeaponUI" type="Node2D" parent="GameUILayer"]
script = ExtResource( 109 )

[node name="Stone" type="Sprite" parent="GameUILayer/WeaponUI"]
position = Vector2( 239, 221 )
scale = Vector2( 3, 3 )
texture = ExtResource( 105 )

[node name="Count" type="Label" parent="GameUILayer/WeaponUI"]
margin_left = 255.0
margin_top = 202.0
margin_right = 311.0
margin_bottom = 234.0
custom_fonts/font = ExtResource( 106 )
text = "x 99"
align = 2

[node name="Debug" type="Node2D" parent="."]
visible = false

[node name="Button" type="Button" parent="Debug"]
margin_left = 252.0
margin_top = 65.0
margin_right = 314.0
margin_bottom = 85.0
text = "damage"

[node name="Button2" type="Button" parent="Debug"]
margin_left = 252.0
margin_top = 89.0
margin_right = 314.0
margin_bottom = 109.0
text = "get w"

[connection signal="pressed" from="Debug/Button" to="GameUILayer/LifeUI" method="_on_Button_pressed"]
[connection signal="pressed" from="Debug/Button2" to="GameUILayer/WeaponUI" method="_on_Button2_pressed"]
